--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "apollo-server-fastify": "^2.21.0",
     "dotenv": "^8.2.0",
     "fastify": "^3.12.0",
-    "graphql": "^15.5.0"
+    "graphql": "^15.5.0",
+    "graphql-tools": "^7.0.4"
   },
   "devDependencies": {
     "ts-node": "^9.1.1",
